# tailwag_utils

./: .gitignore  Cargo.toml  README.MD
src/: lib.rs  strings.rs  tags
src/data_strutures/: hashmap_utils.rs  mod.rs  queued_b_tree_map.rs
src/data_strutures/node_edge_graph/: mod.rs
src/email/: mod.rs  sendgrid.rs
src/files/: mod.rs  walk_dir.rs
src/inline_macros/: mod.rs
src/inline_macros/template_macros/: derive_struct.rs  mod.rs
src/iter_tools/: has_next.rs  mod.rs
src/macro_utils/: attribute_parsing.rs  mod.rs  type_parsing.rs
src/maths/: mod.rs
src/serde_regex/: mod.rs
src/strings/: _to_sentence_case.rs  mod.rs  replace_multiple.rs  to_screaming_snake_case.rs  to_snake_case.rs  to_title_case.rs
src/templates/: mod.rs  walk_dir.rs
src/traits/: _validated_string.rs  mod.rs  validated_string.rs
src/types/: mod.rs
